Fix to ImageUpload causing overflow
Fixed long-standing bug that the ImageUpload file picker element caused an overflow leading to a white bar on the right side of small screens

--- a/css/pediatrics.css
+++ b/css/pediatrics.css
@@ -124,7 +124,9 @@
 
     input {
       font-size: 18px;
-      margin: 2px;
+      overflow: auto;
+      display: inline-block;
+      max-width: 100%;
     }
   
     .pdf-customization-input {
@@ -177,7 +179,9 @@
 
   input {
     font-size: 18px;
-    margin: 2px;
+    overflow: auto;
+    display: inline-block;
+    max-width: 100%;
   }
 
   .pdf-customization-input {
